# Sxx

./: .env.example  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt  script.js  styles.css
.github/workflows/: ci.yml
app/: config.py
app/llm/: openai_client.py
app/prompts/: system_prompts.py
backend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
backend/src/: app.test.ts  index.ts
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
services/ai-engine/app/: main.py  models.py
services/ai-engine/app/analysis/: __init__.py
services/ai-engine/app/context/: __init__.py
services/ai-engine/app/llm/: __init__.py  anthropic_client.py  factory.py
services/ai-engine/app/prompts/: __init__.py
services/ai-engine/app/tracking/: __init__.py
services/ai-engine/tests/: test_analysis.py  test_api.py
tests/: test_prompts.py
